# RunIt

./: .gitignore  CMakeLists.txt  README.md  data.json  imgui.ini
source/: Application.cpp  Application.hpp  Main.cpp  pch.hpp
